--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,16 +1,26 @@
 asgiref==3.8.1
+cffi==1.17.1
+cryptography==44.0.2
 Django==5.2
+django-appconf==1.1.0
+django-axes==7.0.2
 django-cors-headers==4.7.0
+django-cryptography==1.1
+django-extensions==4.0
 django-formtools==2.5.1
 django-otp==1.6.0
 django-phonenumber-field==8.0.0
 django-two-factor-auth==1.17.0
 djangorestframework==3.16.0
 djangorestframework_simplejwt==5.5.0
+MarkupSafe==3.0.2
 phonenumbers==9.0.2
 pillow==11.1.0
+pycparser==2.22
 PyJWT==2.9.0
+pyOpenSSL==25.0.0
 pypng==0.20220715.0
 qrcode==7.4.2
 sqlparse==0.5.3
 typing_extensions==4.13.1
+Werkzeug==3.1.3
